Fix additional article overflow issues

--- a/themes/test/assets/css/components/_article.css
+++ b/themes/test/assets/css/components/_article.css
@@ -93,8 +93,21 @@
     padding: 0 1rem;
   }
 
+  .single > header p {
+    font-size: 10vmin;
+  }
+
   .single > footer li {
     list-style-position: inside;
+  }
+
+  .single > h2 {
+    font-size: 9vmin;
+    word-break: break-word;
+  }
+
+  .single > h3 {
+    font-size: 7vmin;
   }
 
   .single > .supplementary + *:first-of-type,
