--- a/themes/test/assets/css/layouts/_base.css
+++ b/themes/test/assets/css/layouts/_base.css
@@ -97,6 +97,7 @@ small {
   }
 
   h1 {
-    font-size: var(--s3);
+    font-size: 13vmin;
+    word-break: break-word;
   }
 }
